--- a/index.html
+++ b/index.html
@@ -12,46 +12,43 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg narbar-dark bg-dark fixed-top sticky-top">
-        <div class="container container-fluid">
-            <a class="navbar-brand" href="#">
-            <img src="assets/img/logo.png">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                </li>
-                </ul>
-            </div>
+      <div class="container">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+          <img src="assets/img/logo.png" width="111px" class="d-inline-block align-text-top me-2">
+        </a>
+        <button class="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end barra p-3 rounded" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#sobre-mi">Acerca de mi</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#trabajos">Trabajos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#contacto">Contacto</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <header class="card text-end text-bg-dark">
-        <img src="assets/img/bg-hero.jpg" class="card-img" alt="...">
+        <img src="assets/img/bg-hero.jpg" class="card-img" height="400px">
         <div class="card-img-overlay">
-          <h1 class="card-title">Comidas del fin del mundo</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam a mauris id purus blandit dapibus. Nunc at enim et lacus porttitor tincidunt. Donec imperdiet augue nec aliquet sagittis.</p>
-          <button type="button" class="btn btn-outline-primary">Primary</button>
-          <button type="button" class="btn btn-primary">Primary</button>
+          <h1 class="titulo">Comidas del fin del mundo</h1>
+          <p class="presentacion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam a mauris id purus blandit dapibus. Nunc at enim et lacus porttitor tincidunt. Donec imperdiet augue nec aliquet sagittis.</p>
+          <button type="button" class="btn btn-outline-primary">Trabajos</button>
+          <button type="button" class="btn btn-primary">Contacto</button>
         </div>
     </header>
 
     <section class="text-center">
-        <div class="Acerca-de-mi">
-            <h2>Acerca de mi</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam a mauris id purus blandit dapibus.</p>
+        <div class="intro py-3" id="sobre-mi">
+            <p class="present-text">Acerca de mi</h2>
+            <p class="presentacion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam a mauris id purus blandit dapibus.</p>
         </div>
         <div class="card-group">
             <div class="card">
@@ -91,7 +88,7 @@
         </div>
     </section>
     
-    <section class="trabajos py-5">
+    <section id="trabajos" class="trabajos py-5">
         <div class="text-white text-center">
             <h3>Mis Trabajos</h3>
         </div>
@@ -100,8 +97,9 @@
               <div class="card">
                 <img src="assets/img/card-1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Asado en la Patagonia</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam a mauris id purus blandit dapibus.</p>
+                  <button type="button" class="btn btn-outline-dark">Ver más</button>
                 </div>
               </div>
             </div>
@@ -109,8 +107,9 @@
               <div class="card">
                 <img src="assets/img/card-2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Papas del fin del mundo</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam a mauris id purus blandit dapibus.</p>
+                  <button type="button" class="btn btn-outline-dark">Ver más</button>
                 </div>
               </div>
             </div>
@@ -118,36 +117,37 @@
               <div class="card">
                 <img src="assets/img/card-3.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  <h5 class="card-title">Salmones de Alaska</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam a mauris id purus blandit dapibus.</p>
+                  <button type="button" class="btn btn-outline-dark">Ver más</button>
                 </div>
               </div>
             </div>
         </div>
     </section>
 
-    <section class="py-4">
+    <section id="contacto" class="py-4">
         <div class="text-center">
             <h2>Contáctame</h2>
         </div>
         <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Nombre</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1">Nombre</textarea>
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
         </div>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Correo electrónico">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Deja aquí tu mensaje" rows="3"></textarea>
           </div>
           <div class="text-end">
-            <button type="button" class="btn btn-primary">Primary</button>
+            <button type="button" class="btn btn-primary">Enviar</button>
           </div>
     </section>
 
-    <footer class="bg-dark text-white text-center">
+    <footer class="bg-dark text-white text-center py-5">
         <p>Olivia Ros 2019. Todos los derechos reservados.</p>
     </footer>
 </body>
